# match_cooperative_handling

./: CMakeLists.txt  README.md  package.xml
match_cooperative_handling/: __init__.py  cooperative_gui_module.py
scripts/: cooperative_handling_gui.py  ensure_ur_ready.py  log_cooperative_tracking.py  move_arm_to_named_pose.py  set_relative_pose_from_current_object.py  set_virtual_object_from_manipulators.py  set_virtual_object_from_tcp.py  virtual_object_demo_runner.py
src/: virtual_object_demo_runner.cpp  virtual_object_state_node.cpp  virtual_object_tcp_transform_node.cpp
