<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>match_cooperative_handling</name>
  <version>0.0.0</version>
  <description>ROS2 nodes for cooperative handling with virtual objects.</description>
  <maintainer email="Recker@match.uni-hannover.de">rosmatch</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>match_mur_gui</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>oak_camera_calibration</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ur_dashboard_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
